disunity-derive/tests/06-too-many-attributes.stderr
error: unexpected second #[disunity] attribute macro on variant
 --> tests/06-too-many-attributes.rs:6:5
  |
6 |     #[disunity(discriminant = 4)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0433]: failed to resolve: use of undeclared type `ClassVariant`
  --> tests/06-too-many-attributes.rs:11:13
   |
11 |     let _ = ClassVariant::GameObject;
   |             ^^^^^^^^^^^^ use of undeclared type `ClassVariant`
